neacademia font and narrator functionality

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <div id="canvasContainer">
         <canvas class="webgl"></canvas>
     </div>
+
     <script id="vertexShader" type="x-shader/x-vertex">
         varying vec2 vUv;
     
@@ -84,165 +85,27 @@
 
     </script>
 
-    <div class="h1Container">
-        <h1>
-            On the third day, the chief met with his officers. He called the alchemist to the meeting and said, "Let's
-            go
-            see the<br>boy who turns himself into the wind."<br><br>"Let's," the alchemist answered.<br><br>The boy took
-            them to the cliff where he had been on the previous day. He told them all to be seated.<br><br>"It's going
-            to
-            take a while," the boy said.<br><br>"We're in no hurry," the chief answered. "We are men of the
-            desert."<br><br>The boy looked out at the horizon. There were mountains in the distance. And there were
-            dunes,
-            rocks, and plants that<br>insisted on living where survival seemed impossible.<br><br>"What do you want here
-            today?" the desert asked him. "Didn't you spend enough time looking at me yesterday?"<br><br>"Somewhere you
-            are
-            holding the person I love," the boy said. "So, when I look out over your sands, I am also looking at<br>her.
-            I
-            want to return to her, and I need your help so that I can turn myself into the wind."<br><br>"What is love?"
-            the
-            desert asked.<br><br>"Love is the falcon's flight over your sands. Because for him, you are a green field,
-            from
-            which he always returns with<br>game. He knows your rocks, your dunes, and your mountains, and you are
-            generous
-            to him."<br><br>"The falcon's beak carries bits of me, myself," the desert said. "For years, I care for his
-            game, feeding it with the<br>little water that I have, and then I show him where the game is. And, one day,
-            as I
-            enjoy the fact<br><br>that his game thrives on my surface, the falcon dives out of the sky, and takes away
-            what
-            I've created."<br><br>"But that's why you created the game in the first place," the boy answered. "To
-            nourish
-            the falcon. And the falcon then<br>nourishes man. And, eventually, man will nourish your sands, where the
-            game
-            will once<br><br>again flourish. That's how the world goes."<br><br>"So is that what love is?"<br><br>"Yes,
-            that's what love is."<br><br>The desert didn't answer him for a few moments.<br><br>Then it told him, "I'll
-            give
-            you my sands to help the wind to blow, but, alone, I can't do anything. You have to ask for<br>help from the
-            wind."<br><br>A breeze began to blow. The tribesmen watched the boy from a distance, talking among
-            themselves in
-            a language that the<br>boy couldn't understand.<br><br>The alchemist smiled.<br><br>The wind approached the
-            boy
-            and touched his face. It knew of the boy's talk with the desert, because the winds know<br>everything. They
-            blow
-            across the world without a birthplace, and with no place to die.<br><br>"Help me," the boy said. "One day
-            you
-            carried the voice of my loved one to me."<br><br>"Who taught you to speak the language of the desert and the
-            wind?"<br><br>"My heart," the boy answered.<br><br>"You can't be the wind," the wind said. "We're two very
-            different things."<br><br>"That's not true," the boy said. "I learned the alchemist's secrets in my travels.
-            I
-            have inside me the winds, the<br>deserts, the oceans, the stars, and everything created in the universe. We
-            were
-            all made by the<br><br>same hand, and we have the same soul. I want to be like you, able to reach every
-            corner
-            of the world, cross the seas,<br>blow away the sands that cover my treasure, and carry the voice of the
-            woman I
-            love."<br><br>"I heard what you were talking about the other day with the alchemist," the wind said. "He
-            said
-            that everything has its<br>own destiny. But people can't turn themselves into the wind."<br><br>"Just teach
-            me
-            to be the wind for a few moments," the boy said. "So you and I can talk about the limitless
-            possibilities<br>of
-            people and the winds."<br><br>The wind's curiosity was aroused, something that had never happened before. It
-            wanted to talk about<br><br>those things, but it didn't know how to turn a man into the wind.<br><br>It felt
-            that it had no limits, yet here was a boy saying that there were other things the wind should be able to
-            do.<br><br>"This is what we call love," the boy said, seeing that the wind was close to granting what he
-            requested.<br><br>"When you are loved, you can do anything in creation. When you are loved, there's no need
-            at
-            all to<br><br>understand what's happening, because everything happens within you, and even men can turn
-            themselves<br><br>into the wind. As long as the wind helps, of course."<br><br>The wind was a proud being,
-            and
-            it was becoming irritated with what the boy was saying. It commenced<br><br>to blow harder, raising the
-            desert
-            sands. But finally it had to recognize that, even making its way around<br><br>the world, it didn't know how
-            to
-            turn a man into the wind. And it knew nothing about love.<br><br>"In my travels around the world, I've often
-            seen people speaking of love and looking toward the<br><br>heavens," the wind said, furious at having to
-            acknowledge its own limitations. "Maybe it's better to ask heaven."<br><br>"Well then, help me do that," the
-            boy
-            said. "Fill this place with a sandstorm so strong that it blots out the<br><br>sun. Then I can look to
-            heaven
-            without blinding myself."<br><br>So the wind blew with all its strength, and the sky was filled with sand.
-            The
-            sun was turned into a golden disk.<br><br>At the camp, it was difficult to see anything. The men of the
-            desert
-            were already familiar with that wind.<br><br>They called it thesimum , and it was worse than a storm at sea.
-            Their horses cried out, and all their weapons were<br>filled with sand.<br><br>On the heights, one of the
-            commanders turned to the chief and said, "Maybe we had better end this!"<br><br>They could barely see the
-            boy.
-            Their faces were covered with the blue cloths, and their eyes showed fear.<br><br>"Let's stop this," another
-            commander said.<br><br>"I want to see the greatness of Allah," the chief said, with respect. "I want to see
-            how
-            a man turns himself into the<br>wind."<br><br>"The wind told me that you know about love" the boy said to
-            the
-            sun. "If you know about love, you<br><br>must also know about the Soul of the World, because it's made of
-            love."<br><br>"From where I am," the sun said, "I can see the Soul of the World. It communicates with my
-            soul,
-            and<br><br>together we cause the plants to grow and the sheep to seek out shade. From where I am—and I'm
-            a<br><br>long way from the earth—I learned how to love. I know that if I came even a little bit closer to
-            the
-            earth,<br><br>everything there would die, and the Soul of the World would no longer exist. So we contemplate
-            each<br><br>other, and we want each other, and I give it life and warmth, and it gives me my reason for
-            living."<br><br>"So you know about love," the boy said.<br><br>"And I know the Soul of the World, because we
-            have talked at great length to each other during this endless trip through<br>the universe.<br><br>It tells
-            me
-            that its greatest problem is that, up until now, only the<br><br>minerals and vegetables understand that all
-            things are one. That there's no need for iron to be the same as<br><br>copper, or copper the same as gold.
-            Each
-            performs its own exact function as a unique being, and<br><br>everything would be a symphony of peace if the
-            hand that wrote all this had stopped on the fifth day of creation.<br><br>"But there was a sixth day," the
-            sun
-            went on.<br><br>"You are wise, because you observe everything from a distance," the boy said. "But you don't
-            know<br><br>about love. If there hadn't been a sixth day, man would not exist; copper would always be just
-            copper,<br><br>and lead just lead. It's true that everything has its destiny, but one day that destiny will
-            be
-            realized. So<br><br>each thing has to transform itself into something better, and to acquire a new destiny,
-            until, someday, the Soul of the<br>World becomes one thing only."<br><br>The sun thought about that, and
-            decided
-            to shine more brightly.<br><br>"This is why alchemy exists," the boy said. "So that everyone will search for
-            his
-            treasure, find it, and then want to be<br>better than he was in his former life.<br><br>"So what do you want
-            of
-            me?" the sun asked.<br><br>"I want you to help me turn myself into the wind," the boy
-            answered.<br><br>"Nature
-            knows me as the wisest being in creation," the sun said. "But I don't know how to turn you into the
-            wind."<br><br>"Then, whom should I ask?"<br><br>The sun thought for a minute. The wind was listening
-            closely,
-            and wanted to tell every corner of the world that the<br>sun's wisdom had its limitations. That it was
-            unable to
-            deal with this boy who spoke the Language of the World.<br><br>"Speak to the hand that wrote all," said the
-            sun.<br><br>The wind screamed with delight, and blew harder than ever. The tents were being blown from their
-            ties to the earth, and<br>the animals were being freed from their tethers. On the cliff, the men clutched at
-            each other as they sought to keep<br>from being blown away.<br><br>The boy turned to the hand that wrote
-            all. As
-            he did so, he sensed that the universe had fallen silent, and<br><br>he decided not to speak.<br><br>A
-            current
-            of love rushed from his heart, and the boy began to pray. It was a prayer that he had never<br><br>said
-            before,
-            because it was a prayer without words or pleas.<br><br>In the silence, the boy understood that the desert,
-            the
-            wind, and the sun were also trying to understand the signs<br>written by the hand, and were seeking
-            to<br><br>follow their paths.<br><br>He saw that omens were scattered throughout the earth and in space, and
-            that there was no reason or significance<br>attached<br><br>to their appearance; he could see that not the
-            deserts, nor the winds, nor the sun, nor people knew why<br><br>they had been created. But that the hand had
-            a
-            reason for all of this, and that only the hand could perform<br><br>miracles, or transform the sea into a
-            desert… or a man into the wind. Because only the hand understood<br><br>that it was a larger design that had
-            moved the universe to the point at which six days of creation had evolved into a<br>Master Work.<br><br>The
-            boy
-            reached through to the Soul of the World, and saw that it was a part of the Soul of God. And he saw that
-            the<br>Soul of God was his own soul. And that he, a boy, could perform miracles.<br><br>*<br><br>Thesimum
-            blew
-            that day as it had never blown before. For generations thereafter, the Arabs recounted the legend of a
-            boy<br>who had turned himself into the wind, almost destroying a military camp, in defiance<br><br>of the
-            most
-            powerful chief in the desert.<br><br>When thesimum ceased to blow, everyone looked to the place where the
-            boy
-            had been. But he was no longer there.<br><br>The men were terrified at his sorcery. But there were two
-            people
-            who were smiling: the alchemist, because he had found<br>his perfect disciple, and the chief, because that
-            disciple had understood the glory of God.
-            <br><br>
-        </h1>
+
+    <div class="narrator">
+        <p>
+
+        </p>
+    </div>
+
+    <div class="allNarration">
+        <p>
+            <span>The boy looked out at the horizon. There were mountains in the distance.</span>
+            <span>And there were dunes, rocks, and plants that insisted on living where survival seemed
+                impossible.</span>
+        </p>
+        <p>
+            <i>"What do you want here today?"</i> the desert asked him. <i>"Didn't you spend enough time looking at me
+                yesterday?"</i>
+        </p>
+        <p>
+            <span><i>"Somewhere you are holding the person I love,"</i> the boy said.</span>
+            <span><i>"So, when I look out over your sands, I am also looking at her."</i></span>
+        </p>
     </div>
 
 
