fade transition partial

--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,63 @@
             <span><i>"Somewhere you are holding the person I love,"</i> the boy said.</span>
             <span><i>"So, when I look out over your sands, I am also looking at her."</i></span>
         </p>
+        <p>
+            <i>"I want to return to her, and I need your help so that I can turn myself into the wind."</i>
+        </p>
+        <p>
+            <i>"What is love?"</i> the desert asked.
+        </p>
+        <p>
+            <i>"Love is the falcon's flight over your sands."</i>
+        </p>
+        <p>
+            <span><i>"Because for him, you are a green field, from which he always returns with game."</i></span>
+            <span><i>"He knows your rocks, your dunes, and your mountains, and you are generous to him."</i></span>
+        </p>
+        <p>
+            <i>"The falcon's beak carries bits of me, myself,"</i> the desert said.
+        </p>
+        <p>
+            <i>
+                "For years, I care for his game, feeding it with the little water that I have, and then I show him where
+                the
+                game is."
+            </i>
+        </p>
+        <p>
+            <i>
+                "And, one day, as I enjoy the fact that his game thrives on my surface, the falcon dives out of the sky,
+                and takes away
+                what I've created."
+            </i>
+        </p>
+        <p>
+            <i>"But that's why you created the game in the first place,"</i> the boy answered.
+            <i>"To nourish the falcon. And the falcon then nourishes man."</i>
+        </p>
+        <p>
+            <i>"And, eventually, man will nourish your sands, where the game will once again flourish. That's how the
+                world goes."</i>
+        </p>
+        <p>
+            <i>"So is that what love is?"</i>
+        </p>
+        <p>
+            <span><i>"Yes, that's what love is."</i></span>
+            <span>The desert didn't answer him for a few moments.</span>
+        </p>
+        <p>
+            Then it told him, <i>"I'll give you my sands to help the wind to blow, but, alone, I can't do anything. You
+                have to ask for help from the wind."</i>
+        </p>
+        <p>
+            A breeze began to blow. The tribesmen watched the boy from a distance, as the wind approached the boy and
+            touched his
+            face.
+        </p>
+        <p>
+            <i>"Help me,"</i> the boy said. <i>"There was a day you carried the voice of my loved one to me."</i>
+        </p>
     </div>
 
 
