more html text and partial cursor functionality

--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,9 @@
 
     </script>
 
+    <div id="cursor">
+
+    </div>
 
     <div class="narrator">
         <p>
@@ -125,8 +128,7 @@
         <p>
             <i>
                 "For years, I care for his game, feeding it with the little water that I have, and then I show him where
-                the
-                game is."
+                the game is."
             </i>
         </p>
         <p>
