big bug adding wind video

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
         <canvas class="webgl"></canvas>
     </div>
 
+    <video id="windVideo" loop crossOrigin="anonymous" playsinline style="display:none">
+        <source src="wind_wisp.mp4" type='video/mp4;'>
+    </video>
+
     <script id="vertexShader" type="x-shader/x-vertex">
         varying vec2 vUv;
     
