--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,19 @@
 
 <body id="body">
 
+    <!-- Import maps polyfill -->
+    <!-- Remove this when import maps will be widely supported -->
+    <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+
+    <script type="importmap">
+    			{
+    				"imports": {
+    					"three": "../build/three.module.js"
+    				}
+    			}
+    </script>
+
+
     <div id="canvasContainer">
         <canvas class="webgl"></canvas>
     </div>
@@ -108,7 +121,7 @@
 
 			}
     </script>
-    
+
     <!-- particles -->
     <script id="vertexParticleShader" type="x-shader/x-vertex">
         uniform float pointMultiplier;
