begin UI changes

--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,12 @@
     <div id="splash">
         <h1>The Alchemist</h1>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
+        <p>This web-storybook is based on the classic inspirational novel by Paulo Coelho.
 
-        <button>PLAY</button>
+            This webpage will step you through a fresh reimagining of the story, a visual transition of the old world
+            with the new.</p>
+
+        <button>BEGIN</button>
     </div>
 
     <script id="vertexShader" type="x-shader/x-vertex">
@@ -148,6 +147,31 @@
 
     </div>
 
+    <!-- navigation UI 
+    <div id="UI">
+        <div id="chapterNav">
+            <img src="/Users/aarongreider/Desktop/CODE/Alchemist/static/html/ham.png">
+            <p>
+                <span id="active">PART I, <i>The Desert</i></span> —————
+                <span>PART II, <i>The Falcon</i></span> —————
+                <span>PART III, <i>The Wind</i></span>
+            </p>
+        </div>
+        <div>
+            <img src="/Users/aarongreider/Desktop/CODE/Alchemist/static/html/previous.png">
+            <p>previous</p>
+        </div>
+        <div>
+            <img src="/Users/aarongreider/Desktop/CODE/Alchemist/static/html/skip.png">
+            <p>skip</p>
+        </div>
+        <div>
+            <img src="/Users/aarongreider/Desktop/CODE/Alchemist/static/html/restart.png">
+            <p>restart</p>
+        </div>
+    </div>
+-->
+    <!-- narrated text -->
     <div class="narrator">
         <p>
 
