--- a/src/index.html
+++ b/src/index.html
@@ -30,20 +30,29 @@
     </div>
 
     <div id="splash">
-        <h1>The Alchemist</h1>
+        <div>
+            <h1>The Alchemist</h1>
+            <p>This web-storybook is based on the classic inspirational novel by Paulo Coelho.
+                <br><br>
+                This webpage will step you through a fresh reimagining of the story, a visual transition of the old
+                world
+                with the new.
+            </p>
+            <button>BEGIN</button>
+        </div>
 
-        <p>This web-storybook is based on the classic inspirational novel by Paulo Coelho.
-            <br><br>
-            This webpage will step you through a fresh reimagining of the story, a visual transition of the old world
-            with the new.
-        </p>
-
-        <button>BEGIN</button>
+        <!-- <video playsinline autoplay muted loop>
+            <source src="movie.mp4" type="video/mp4">
+        </video> -->
     </div>
 
 
     <div id="cursor">
+        <div>
+            <div>
 
+            </div>
+        </div>
     </div>
 
     <!-- navigation UI -->
@@ -51,7 +60,7 @@
         <div id="chapterNav">
             <img src="https://raw.githubusercontent.com/aarongreider/Alchemist/master/static/html/ham.png">
             <!-- <img src="/Users/aarongreider/Desktop/CODE/Alchemist/static/html/ham.png"> -->
-            <p>
+            <p class="noHover">
                 <span id="active">part i, <i>The Desert</i></span>
                 <span class="line">&nbsp;&nbsp;&nbsp;&nbsp;</span>
                 <span>part ii, <i>The Falcon</i></span>
