--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,10 @@
             <img src="https://raw.githubusercontent.com/aarongreider/Alchemist/master/static/html/restart.png">
             <p>restart</p>
         </div>
+        <div id="autoplay">
+            <img src="https://raw.githubusercontent.com/aarongreider/Alchemist/master/static/html/restart.png">
+            <p>autoplay</p>
+        </div>
 
     </div>
 
