--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
 <body id="body">
@@ -33,6 +35,10 @@
         <video id="starsVideo" playsinline autoplay muted loop>
             <source src="/Users/aarongreider/Desktop/CODE/Alchemist/src/starmap.mp4" type="video/mp4">
         </video>
+
+        <audio autoplay loop id="chimesAudio">
+            <source src="/Users/aarongreider/Desktop/CODE/Alchemist/src/chimes.mp3">
+        </audio>
 
         <div>
             <h1>The Alchemist</h1>
@@ -86,7 +92,7 @@
         </div>
         <div id="autoplay">
             <img src="https://raw.githubusercontent.com/aarongreider/Alchemist/master/static/html/restart.png">
-            <p>autoplay</p>
+            <p>autoplay: <span>off</span></p>
         </div>
 
     </div>
